--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Dart SDK
-        uses: dart-lang/setup-dart@v1
+        uses: dart-lang/setup-dart@v1.5.0
         with:
           sdk: 'stable'
 
@@ -32,11 +32,17 @@ jobs:
 
       - name: Run additional lints
         run: |
-          dart pub global activate dart_code_metrics
-          dart pub global run dart_code_metrics:metrics analyze lib --fatal-style --fatal-performance --fatal-warnings
+          dart pub global activate dcm
+          dart pub global run dcm:metrics analyze lib --fatal-style --fatal-performance --fatal-warnings
 
       - name: Check for outdated dependencies
-        run: dart pub outdated --mode=null-safety
+        run: dart pub outdated
+
+      - name: Run tests with coverage
+        run: |
+          dart pub global activate coverage
+          dart test --coverage=coverage
+          dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --report-on=lib
 
       - name: Verify pub publish
         run: dart pub publish --dry-run
