--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   meta: ^1.9.0
   xml: ^6.5.0
+  archive: ^3.4.10
+  dart_console: ^4.1.2
 
 dev_dependencies:
   build_runner: ^2.4.7
