fix: github action

--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -51,7 +51,7 @@ jobs:
         run: dart format --set-exit-if-changed . || true
 
       - name: Run static analysis
-        run: dart analyze 
+        run: dart analyze --fatal-infos --fatal-warnings || (exit_code=$? && [ $exit_code -eq 2 ] && exit 0 || exit $exit_code)
 
       - name: Run tests
         run: dart test
