--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   archive: ^4.0.7
   dart_console: ^4.1.2
 
+  collection: any
 dev_dependencies:
   build_runner: ^2.4.7
   lint: ^2.3.0
