--- a/MusicXMLParser.Tests/MusicXMLParser.Tests.csproj
+++ b/MusicXMLParser.Tests/MusicXMLParser.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -28,6 +28,12 @@
 
   <ItemGroup>
     <EmbeddedResource Include="TestData\*.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TestData/**/*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
